--- a/assets/css/_variable.scss
+++ b/assets/css/_variable.scss
@@ -18,6 +18,7 @@ $grey-border:			#D9D9D9;
 $grey-lighter:          #E7E7E7;
 $grey-footer:			#E2E2E2;
 $grey-modal:			#F9F9F9;
+$grey-secondary:        #717171;
 
 // Fonts
 
