--- a/assets/css/components/_search-refine.scss
+++ b/assets/css/components/_search-refine.scss
@@ -12,7 +12,7 @@
 
 	&__button {
 		border: 0;
-		background-color: $grey-disabled;
+		background-color: $grey-secondary;
 		color: $white;
 		width: 100%;
 		height: 100%;
